--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 JWT_SECRET=secret
+MONGO_URI=mongodb+srv://tanyaabrol12:tanya123@cgp.v8bsvwb.mongodb.net/?retryWrites=true&w=majority&appName=cgp
+FRONTEND_URL=https://college-grievance-portal-frontend1.onrender.com
