--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,15 @@
 JWT_SECRET=secret
-MONGO_URI=mongodb+srv://tanyaabrol12:tanya123@cgp.v8bsvwb.mongodb.net/?retryWrites=true&w=majority&appName=cgp
-FRONTEND_URL=https://college-grievance-portal-frontend1.onrender.com
+MONGO_URI=mongodb+srv://tanyaabrol12_db_user:2SLhMAaSshZ0RIec@cgpp.vztqkay.mongodb.net/?retryWrites=true&w=majority&appName=cgpp
+FRONTEND_URL=http://localhost:3000
+ADMIN_ID=admin@cgs.com
+ADMIN_PASS=admin123
+HOD_ID=hod@cgs.com
+HOD_PASS=hod123
+# MAIN_EMAIL=tanyaabrol@gmail.com
+# MAIN_PASS=tanya123
+EMAIL_USER=abrolltanya@gmail.com
+EMAIL_PASSWORD=kcwv egex ncja sglp
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+NODE_ENV=development
+PORT=3000
