--- a/backend/.env
+++ b/backend/.env
@@ -5,11 +5,11 @@ ADMIN_ID=admin@cgs.com
 ADMIN_PASS=admin123
 HOD_ID=hod@cgs.com
 HOD_PASS=hod123
-# MAIN_EMAIL=tanyaabrol@gmail.com
-# MAIN_PASS=tanya123
+MAIN_EMAIL=tanyaabrol@gmail.com
+MAIN_PASS=tanya123
 EMAIL_USER=abrolltanya@gmail.com
 EMAIL_PASSWORD=kcwv egex ncja sglp
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 NODE_ENV=development
-PORT=3000
+PORT=5000
