--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 JWT_SECRET=secret
-MONGO_URI=mongodb+srv://tanyaabrol12_db_user:2SLhMAaSshZ0RIec@cgpp.vztqkay.mongodb.net/?retryWrites=true&w=majority&appName=cgpp
+MONGO_URI=mongodb+srv://tanyaabrol12_db_user:zmvIo8GtmRaPLJAJ@cgpfinal.fgh1kms.mongodb.net/?retryWrites=true&w=majority&appName=cgpfinal
 FRONTEND_URL=https://college-grievance-portal3-0-frontend1.onrender.com
 ADMIN_ID=admin@cgs.com
 ADMIN_PASS=admin123
